<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strUser"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strUserName"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="200dp"
                android:layout_height="350dp"
                android:layout_alignBottom="@+id/btnUserSelect"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_weight="0.99" >

            </ListView>

            <Button
                android:id="@+id/btnUserAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/listView1"
                android:layout_weight="1"
                android:text="@string/btnUserAdd" />

            <Button
                android:id="@+id/btnUserEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnUserAdd"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnUserAdd"
                android:layout_weight="1"
                android:text="@string/btnUserEdit" />

            <Button
                android:id="@+id/btnUserDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnUserEdit"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnUserEdit"
                android:layout_weight="1"
                android:text="@string/btnUserDelete" />

            <Button
                android:id="@+id/btnUserSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnUserDelete"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnUserDelete"
                android:layout_weight="1"
                android:text="@string/btnUserSelect" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>