<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/textViewGridViewDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Date"
            android:textColor="@color/crimson"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnLast"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLast" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/btnNext" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridViewWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </GridView>

</LinearLayout>